@@ -16,6 +16,13 @@ You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
+2002-05-27  Jonathan Hogg  <jonathan@onegoodidea.com>
+
+	* README: Updated to be less Glasgow-centric and match the new
+	build style.
+
+	* INSTALL: Short basic installation instructions.
+
 2002-05-26  Jonathan Hogg  <jonathan@onegoodidea.com>
 
 	* Makefile.am, configure.ac: Now using autoconf/automake to
